# UCO

./: README.md
BD/: EjExamen.sql  Script.sql
BD/Practica1/: Ej10.sql  Ej11.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql  Ej9.sql
BD/Practica2/: Ej1.sql  Ej10.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej8.sql  Ej9.sql
BD/Practica2amp/: Ej1.sql  Ej10.sql  Ej11.sql  Ej12.sql  Ej13.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql  Ej9.sql
BD/Practica3/: Ej1.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql
BD/Practica3amp/: Ej1.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql
BD/Practica4/: Ej1.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql
BD/Practica5/: Ej1.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql  Ej6.sql  Ej7.sql  Ej8.sql  Ej9.sql
BD/Practica5amp/: Ej1.sql  Ej2.sql  Ej3.sql  Ej4.sql  Ej5.sql
ED/alphabet_soup/: alphabet_soup_solver.cpp  trie.cpp  trie.hpp  trie_node.cpp  trie_node.hpp
ED/avl-tree/: avltree.hpp  avltree_imp.hpp
ED/dos_detector-open_addressing/: dos_detector.cpp  hash.cpp  hash_table_entry.hpp  hash_table_entry_imp.hpp  hash_table_imp.hpp  ip_utils.cpp  system.cpp
ED/kdtree/: kdtree.cpp
ED/linear_ds/: cdarray.hpp  cdarray_imp.hpp  list.hpp  list_imp.hpp  queue_imp.hpp  stack_imp.hpp
ED/vector2d/: vector2d.hpp
ED/wgraph_traversals/: kruskal_algorithm_imp.hpp  prim_algorithm_imp.hpp  wgraph_traversals_imp.hpp
PAS/Practica1/: Ej1.sh  Ej2.sh  Ej3.sh  Ej4.sh  Ej5.sh  Ej6.sh
PAS/Practica2/: Ej1.sh  (+6 more)
POO/p8/tests/: CMakeLists.txt
(+173 files in other folders)
